fix font-family and letter spacing

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -32,11 +32,6 @@ h3 {
   margin-top: 1rem;
 }
 
-.sub-title {
-  font-size: 1.5rem;
-  margin-bottom: 4rem;
-}
-
 .intro-block {
   display: block;
   font-size: 2rem;
@@ -67,7 +62,8 @@ h3 {
 }
 
 h1 {
-  font-family: 'Archigruntvo Black', sans-serif;
+  font-family: 'Archivo Black', sans-serif;
+  letter-spacing: 0.5px;
   color: $font-color;
   opacity: 0.9;
   font-weight: lighter;
